--- a/src/main/resources/META-INF/descriptors/FileInfoTable.yml
+++ b/src/main/resources/META-INF/descriptors/FileInfoTable.yml
@@ -22,4 +22,9 @@ fields:
         params:
             header:
                 width: 200px
+                
+                
+params:
+  checkmark: true
+  
     
