--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.dynamia.modules</groupId>
-    <artifactId>com.dynamia.modules.filemanager</artifactId>
+    <groupId>tools.dynamia.modules</groupId>
+    <artifactId>tools.dynamia.modules.filemanager</artifactId>
     <name>Dynamia Modules - FileManager (${project.version})</name>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         
-        <dynatools.version>2.1.0.Final</dynatools.version>
+        <dynatools.version>3.0.0.Final</dynatools.version>
     </properties>
     
     
     <dependencies>
         <dependency>
-            <groupId>com.dynamia.tools</groupId>
-            <artifactId>com.dynamia.tools.web.zk</artifactId>
+            <groupId>tools.dynamia</groupId>
+            <artifactId>tools.dynamia.zk.crud</artifactId>
             <version>${dynatools.version}</version>
         </dependency>
     </dependencies>
