--- a/src/main/resources/META-INF/descriptors/FileInfoTable.yml
+++ b/src/main/resources/META-INF/descriptors/FileInfoTable.yml
@@ -1,11 +1,11 @@
 view: table
 beanClass: tools.dynamia.io.FileInfo
 autofields: false
-
+customizer: 
 
 fields:
     
-    extension:
+    icon:
         label: T
         component: iconimage
         params:
