--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         
-        <dynatools.version>[3.0.0.Final,3.1.0.Final]</dynatools.version>
+        <dynatools.version>3.1.0.RC</dynatools.version>
     </properties>
     
     
