--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <groupId>tools.dynamia.modules</groupId>
     <artifactId>tools.dynamia.modules.filemanager</artifactId>
     <name>Dynamia Modules - FileManager (${project.version})</name>
-    <version>2.0.0</version>
+    <version>3.0.0</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         
-        <dynatools.version>3.1.0.RC</dynatools.version>
+        <dynatools.version>3.1.0.Final</dynatools.version>
     </properties>
     
     
@@ -26,7 +26,7 @@
     <distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://mde.dynamiaweb.com:8081/repository/releases/</url>
+            <url>http://nexus.dynamiaweb.com/repository/releases/</url>
         </repository>        
     </distributionManagement>
   
