--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <dependencies>
         <dependency>
             <groupId>tools.dynamia</groupId>
-            <artifactId>tools.dynamia.zk.crud</artifactId>
+            <artifactId>tools.dynamia.zk</artifactId>
             <version>${dynamiatools.version}</version>
         </dependency>
 
